# security-remediation-system

./: .gitignore  ARCHITECTURE.md  CHAT.md  Dockerfile  Dockerfile.backend  README.md  REMEDIATION_REPORT.md  REQUIREMENT.md  TEST.md  build_and_run.sh  create_and_deploy.sh  docker-compose.yml  reset_s3_state.py
.planning/: 4-1-PLAN.md  4-CONTEXT.md  4-VERIFICATION.md
autoresearch/: eval_harness.py  program.md  pyproject.toml
autoresearch/autoresearch/: __init__.py  patch_applier.py  scanner_parsers.py
autoresearch/benchmark/checkov/: cloudtrail_multiregion_001.json  iam_wildcard_001.json  kms_rotation_001.json  rds_public_001.json  s3_no_encryption_001.json  s3_public_acl_001.json  s3_versioning_001.json  sg_open_ingress_001.json
autoresearch/benchmark/codeql/: path_traversal_001.json  sql_injection_001.json  ssrf_001.json
autoresearch/benchmark/semgrep/: command_injection_001.json  hardcoded_secret_001.json  path_traversal_001.json  rules.yaml  sql_injection_001.json  ssrf_001.json  xss_001.json  yaml_unsafe_001.json
autoresearch/benchmark/trivy/: cryptography_cve_001.json  flask_cve_001.json  jinja2_cve_001.json  lodash_cve_001.json  pillow_cve_001.json  pyyaml_cve_001.json  requests_cve_001.json
autoresearch/tests/: test_eval_harness.py  test_patch_applier.py  test_scanner_parsers.py
backend/: pyproject.toml
backend/rules/: mcp_security.yaml
backend/src/remediation_api/: config.py  logger.py  main.py  worker.py
backend/src/remediation_api/agents/: autonomous_agent.py  evaluator.py  generator.py  orchestrator.py
backend/src/remediation_api/models/: remediation.py  scan.py
backend/src/remediation_api/routers/: health.py  scan.py  upload.py
backend/src/remediation_api/services/: github.py  llm_provider.py  memory_service.py  memory_store.py  queue.py  results.py  scanner.py  storage.py
backend/src/remediation_api/vector/: store.py
backend/tests/: test_autonomous_agent.py  test_evaluator.py  test_generator.py  test_llm_provider.py  test_models_remediation.py  test_orchestrator.py  test_results_pending.py  test_results_service.py  test_scan_router.py
cli/: README.md  claude-plugin.json  install-plugin.sh  pyproject.toml
cli/plugin/: .mcp.json  README.md
cli/plugin/.claude-plugin/: plugin.json
cli/plugin/hooks/: hooks.json  pre-push-warn.sh
cli/plugin/skills/security-scan/: SKILL.md
cli/skills/: security-scan.md
cli/src/secremediator/: agent.py  cli.py  client.py  config.py  mcp_server.py
cli/src/security_pipeline/: agent.py  archiver.py  cli.py  client.py  config.py  mcp_server.py  multi_turn_agent.py
cli/tests/: test_cli_agent.py  test_cli_run.py  test_mcp_server.py  test_multi_turn_agent.py
docs/: local-cli-mcp-guide.md
frontend/: next.config.ts  package-lock.json  package.json
memory/: MEMORY.md  project_session_state.md
terraform/: main.tf  (+2 more)
(+27 files in other folders)
