[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoresearch"
version = "0.1.0"
description = "Autoresearch continuous improvement loop for security remediation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["autoresearch"]
