[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.13",
    "boto3>=1.42.11",
    "fastapi>=0.124.4",
    "openai>=2.13.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "semgrep>=1.145.2",
    "uvicorn>=0.38.0",
    "lancedb>=0.4.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
