[project]
name = "secremediator"
version = "0.1.0"
description = "Local security scan CLI and MCP server for the Security Remediation System"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "claude-agent-sdk",
]

[project.scripts]
secremediator = "secremediator.cli:app"
secremediator-mcp = "secremediator.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secremediator"]
